[gd_scene load_steps=4 format=2]

[ext_resource path="res://entities/player/playerBase.gd" type="Script" id=1]
[ext_resource path="res://entities/classes/hitboxComponent/hitboxComponent.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 28 )

[node name="playerBase" type="KinematicBody2D" groups=["player"]]
collision_layer = 0
script = ExtResource( 1 )

[node name="coyoteTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="flooDetectBack" type="RayCast2D" parent="."]
position = Vector2( -6, 0 )
enabled = true
cast_to = Vector2( 0, 4 )

[node name="floorDetect" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 4 )

[node name="flooDetectFont" type="RayCast2D" parent="."]
position = Vector2( 6, 0 )
enabled = true
cast_to = Vector2( 0, 4 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -63 )
current = true
editor_draw_limits = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 0.858927
anchor_bottom = 0.875
margin_right = -6.10352e-05
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="collideUp" type="RayCast2D" parent="."]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( 0, -56 )

[node name="onWallTop" type="RayCast2D" parent="."]
position = Vector2( 0, -40 )
enabled = true
cast_to = Vector2( 28, 0 )

[node name="onWallMid" type="RayCast2D" parent="."]
position = Vector2( 0, -24 )
enabled = true
cast_to = Vector2( 28, 0 )

[node name="onWallBotton" type="RayCast2D" parent="."]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( 28, 0 )

[node name="HitboxComponent" type="Area2D" parent="."]
position = Vector2( 0, -2 )
collision_layer = 0
collision_mask = 1536
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2( 0, -26 )
shape = SubResource( 1 )

[connection signal="timeout" from="coyoteTimer" to="." method="coyoteTimerTimeout"]
[connection signal="HitboxDamaged" from="HitboxComponent" to="." method="hitboxTriggered"]
